--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,20 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 
+  <!-- PWA IOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="green">
+<meta name="apple-mobile-web-app-title" content="My Timesheet App">
+<link rel="apple-touch-icon" href="assets/icons/icon-72x72.png" sizes="72x72">
+<link rel="apple-touch-icon" href="assets/icons/icon-96x96.png" sizes="96x96">
+<link rel="apple-touch-icon" href="assets/icons/icon-128x128.png" sizes="128x128">
+<link rel="apple-touch-icon" href="assets/icons/icon-144x144.png" sizes="144x144">
+<link rel="apple-touch-icon" href="assets/icons/icon-152x152.png" sizes="152x152">
+<link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="assets/icons/icon-384x384.png" sizes="384x384">
+<link rel="apple-touch-icon" href="assets/icons/icon-512x512.png" sizes="512x512">
+<link rel="apple-touch-icon" href="assets/icons/icon-180x180.png" sizes="180x180">
+
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
