--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
 <link rel="apple-touch-icon" href="assets/icons/icon-180x180.png" sizes="180x180">
 
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
